--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Odin's Recipes</h1>
     <ul>
         <li><a href="./recipes/fried_eggs.html">Fried eggs</a></li>
+        <li><a href="./recipes/pasta.html">Pasta</a></li>
+        <li><a href="./recipes/cereal_bowl.html">Cereal bowl</a></li>
     </ul>
 </body>
 </html>
