Adding basic stylesheet to project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Odin's recipes</title>
 </head>
 <body>
     <h1>Odin's Recipes</h1>
-    <ul>
+    <ul class="recipe">
         <li><a href="./recipes/fried_eggs.html">Fried eggs</a></li>
         <li><a href="./recipes/pasta.html">Pasta</a></li>
         <li><a href="./recipes/cereal_bowl.html">Cereal bowl</a></li>
