--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Pasta recipe</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
     <P>Discover how you can do it easily in just a few minutes scrolling down below.</P>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredient">
         <li>Pasta</li>
         <li>Oil</li>
         <li>Salt</li>
